--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>smarttools</groupId>
     <artifactId>smartplayers</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
