--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>4.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.sonatype.sisu</groupId>
+            <artifactId>sisu-guice</artifactId>
+            <version>2.1.7</version>
+        </dependency>
     </dependencies>
 
 
