Changed inside command object

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -2,3 +2,7 @@ angle.left-rotate=90
 angle.right-rotate=90
 speed.panzer=2
 speed.bullet=4
+bound.left=0
+bound.right=100
+bound.top=100
+bound.bottom=0
